4.4.9 -> 4.5:
	- glen: add mimetype(foo/bar) deps autogeneration (by Marcin Banasiak)
	- glen: add scripts/hrmib-cache to fill initial hrmib export to /var/cache/hrmib
	- jbj: configure: don't expand non-existent scripts/perl.{prov,req}.in.
	- jbj: rpmrepo: backport the remaining popt --queryformat aliases.
	- jbj: rpmrepo: populate the header internal values.
	- jbj: rpmrepo: functional --yum:primary.xml (w incorrect values).
	- jbj: rpmrepo: backport more header extension tags/formats.
	- jbj: rpmrepo: backport :bncdata, :cdata, :utf8 header format extensions.
	- jbj: rpmrepo: backport --yum:primary.xml popt alias from HEAD.
	- glen: print error when makeTempPath fails due missing temp dir
	- glen: merged perl find.{prov,req} fixes from PLD
	- jbj: header: free tag data on error retrurn with damaged data.
	- rpm.org: rpmsw: insure that time has passed while calibrating (#435309).
	- jbj: header: fix: avoid double free with damaged data (#442761).
	- jbj: fix: stray extraneous character with -qi --changelog spew.
	- robert: backport debugedit.c from 5.0 to get it build with latest gcc
	- glen: backport from 5.0: --rollback PSM_INIT changes added fstates before initialize.
	- proyvind: add back SOURCEPACKAGE tag for Mandriva to allow packages to be rebuilt on older releases
	- proyvind: add back rpm v3 format support for Mandriva
	- proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
	- proyvind: fix built-in zlib dependencies (from gb)
	- proyvind: force generation of PIC code for static libs that can be built into a DSO (zlib, file) (from gb)
	- proyvind: make rpm -bb --quiet" quiet as should be (from pixel)
	- proyvind: do check free size when bavail is 0 (from pixel)
	- proyvind: allow to set %_srcdefattr for src.rpm (from pixel)
	- proyvind: check amd64 vs x86_64, they're the same arch (from Gwenole Beauchesne/gb)
	- proyvind: do not crash when FILELINKTOS has more entries than DIRNAMES (from pixel)