@@ -59,7 +59,8 @@ struct headerToken_s {
     void * blob;		/*!< Header region blob. */
 /*@only@*/ /*@null@*/
     const char * origin;	/*!< Header origin (e.g. path or URL). */
-    uint32_t time;		/*!< Header time. */
+    const char * digest;	/*!< Header digest (from origin *.rpm file) */
+    struct stat sb;		/*!< Header stat(2) (from origin *.rpm file) */
     uint32_t instance;		/*!< Header instance (if from rpmdb). */
     uint32_t startoff;		/*!< Header starting byte offset in package. */
     uint32_t endoff;		/*!< Header ending byte offset in package. */
