@@ -28,13 +28,17 @@ LIBRPMDB_0
     headerDump;
     headerGetLangs;
     headerGetRawEntry;
+    headerGetDigest;
+    headerSetDigest;
     headerGetOrigin;
+    headerSetOrigin;
+    headerGetInstance;
     headerGetEndOff;
     headerSetEndOff;
     headerGetStartOff;
     headerSetStartOff;
-    headerGetTime;
-    headerSetTime;
+    headerGetStatbuf;
+    headerSetStatbuf;
     headerMacrosLoad;
     headerMacrosUnload;
     headerNEVRA;
